@@ -63,6 +63,9 @@ CFG_INTEGER = (
     "^lap_time_history_count$|"
     "^leading_zero$|"
     "^player_index$|"
+    "^parts_width$|"
+    "^parts_max_height$|"
+    "^parts_max_width$|"
     "^position_x$|"
     "^position_y$|"
     "^stint_history_count$|"
@@ -75,6 +78,7 @@ CFG_INTEGER = (
     "bar_width|"
     "column_index|"
     "decimal_places|"
+    "display_margin|"
     "display_size|"
     "font_size|"
     "icon_size|"
