@@ -149,6 +149,33 @@ WIDGET_DEFAULT = {
         "column_index_elevation": 3,
         "column_index_odometer": 4,
     },
+    "damage": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 658,
+        "position_y": 515,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "display_margin": 4,
+        "inner_gap": 3,
+        "parts_width": 6,
+        "parts_max_width": 16,
+        "parts_max_height": 22,
+        "show_background": True,
+        "bkg_color": "#88000000",
+        "color_body": "#FFFFFF",
+        "color_wheel": "#AAFF00",
+        "color_damage_light": "#FFFF00",
+        "color_damage_heavy": "#FF0000",
+        "color_damage_detached": "#000000",
+        "show_integrity_reading": True,
+        "show_inverted_integrity": False,
+        "font_color_integrity": "#FFFFFF",
+    },
     "deltabest": {
         "enable": True,
         "update_interval": 20,
